# nomad-airbnbclone

./: README.md  render.yaml
backend/: build.sh  pyproject.toml
backend/bookings/: models.py  serializers.py  urls.py  views.py
backend/bookings/migrations/: 0001_initial.py  0002_rename_experiences_booking_experience.py  0003_alter_booking_experience_alter_booking_room_and_more.py
backend/categories/: models.py  views.py
backend/categories/migrations/: 0001_initial.py  0002_alter_category_options.py
backend/config/: schema.py  settings.py  urls.py
backend/direct_messages/: models.py
backend/direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
backend/experiences/: models.py  serializers.py  urls.py  views.py
backend/experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_detail_and_more.py  0003_alter_experience_category_alter_experience_host_and_more.py
backend/houses/: admin.py  models.py
backend/houses/migrations/: 0001_initial.py  0002_initial.py  0002_rename_price_house_price_per_night.py  0003_house_pets_allowed.py
backend/medias/: admin.py  models.py  serializers.py  urls.py  views.py
backend/medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py  0003_alter_photo_file_alter_video_file.py  0004_alter_video_experience.py
backend/reviews/: admin.py
backend/reviews/migrations/: 0001_initial.py  0002_alter_review_payload.py  0003_alter_review_experience_alter_review_room_and_more.py
backend/rooms/: admin.py  models.py  mutations.py  queries.py  schema.py  serializers.py  tests.py  types.py  urls.py  views.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/wishlists/: models.py  serializers.py  urls.py  views.py
(+41 files in other folders)
