[tool.poetry]
name = "airbnbclone-backend"
version = "0.1.0"
description = ""
authors = ["bioroid17 <trace1997@ajou.ac.kr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
djangorestframework = "^3.15.2"
strawberry-graphql = {extras = ["debug-server"], version = "^0.237.3"}
strawberry-graphql-django = "^0.47.1"
pyjwt = "^2.9.0"
django-environ = "^0.11.2"
django-cors-headers = "^4.4.0"
requests = "^2.32.3"
dj-database-url = "^2.3.0"
psycopg2-binary = "^2.9.10"
whitenoise = {extras = ["brotli"], version = "^6.8.2"}
gunicorn = "^23.0.0"
uvicorn = "^0.32.0"
sentry-sdk = {extras = ["django"], version = "^2.18.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
